[Fix] Banner and navbar overlap

--- a/www/resource/css/home.css
+++ b/www/resource/css/home.css
@@ -365,7 +365,7 @@ footer {
 #banner {
   width: 100%;
   /*height: 300px;*/
-  margin-top: 4px;
+  margin-top: 2px;
 }
 
 .banner-wrapper {
